Reformat everything to use 4 spaces